frontend/deploy-fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-fe
spec:
  selector:
    matchLabels:
      app: app-fe
  template:
    metadata:
      labels:
        app: app-fe
    spec:
      containers:
      - name: app-fe
        image: mwbowo/nodejs:front-end
        ports:
        - containerPort: 3000
