frontend/svr-fe.yaml
apiVersion: v1
kind: Service
metadata:
  name: svr-fe
spec:
  selector:
    app: app-fe
  ports:
  - port: 80
    targetPort: 3000
