frontend/ingress-fe.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-fe
  labels:
    name: ing-fe
spec:
  ingressClassName: nginx
  rules:
  - host: fe.kube.mwbowo.my.id
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svr-fe
            port: 
              number: 80
